# miband2auth

./: LICENSE  README.md  pyproject.toml
miband2auth/: __init__.py  authsession.py  authwindow.py  main.py
